crates/lk-cli/src/commands/snapshots/lore__commands__schema__tests__agents-en-personal.snap
---
source: crates/lk-cli/src/commands/schema.rs
expression: md
---
---
type: schema
generator: lore <version>
---

# Lorekeeper Page Formats

> Generated by `lore schema` — locale: en
> Regenerate after changing `vault.locale`: `lore schema`, which REPLACES this file wholesale — nothing added here survives it, and `lore validate` prompts for it on every run. Vault-specific instructions belong in a file this tool does not generate.

**This vault is written in English.** Every word added to a page goes in that language — a summary, a theme, a concept's synthesis, an exploration — whatever language the source arrived in. Two things are not translated by it. Source content is quoted as it stands, and a NAME is not prose: a concept's name is the form its own source writes, so a term a source writes in another language keeps its spelling here (§ Concept convergence says what follows from that).

Pages with an LLM-owned section also carry an `llm_inputs` frontmatter block, and it is a two-part contract, not an opaque cache. `lore ingest` and `lore synthesis` record `<key>` — the hash of the input enqueued — and whoever ANSWERS the section records `<key>_done` with that same hash. A section counts as answered only when the two are EQUAL; a non-empty body never signals it, because a section can be legitimately empty (an extraction that found nothing, a focus-filtered summary), and inferring completion from content would re-enqueue every such result forever. So: never touch a `<key>` input hash, and stamp `<key>_done` when you fill the section it belongs to. Stamping is not bookkeeping: a section whose marker does not match its input is ANSWERED AGAIN by the next render, which writes it EMPTY and re-queues it, so an unstamped body is lost the next time the page is rendered — by `lore ingest` for a daily or document page, by `lore synthesis` for a synthesis or review page. `lore doctor` names every page in that state, the queued ones included. The one exception is `concepts_done`: that section and its marker are both written by `lore queue apply`, and stamping it by hand claims an empty section is answered, which loses the extraction permanently. A page you create directly has no pipeline behind it and omits the whole block.

A page's `llm_inputs` map is machine-coordination state: each key records the input a section is owed against and its `_done` companion the input a section was written from. Never author or edit those values — the writer of a section stamps its own marker in the same edit. A concept page's `aliases` is renderer-written and always present, carrying the title and every other name the page answers to; on a page you author yourself, write `aliases` only where the page really does answer to another name.

Each table's `Owner` column names who fills that section's body: `machine` = `lore` writes it, under whichever command produces the page (`lore graph backlinks-sync` for concept; `lore ingest` for daily, document, work-log; `lore synthesis` for weekly-review, monthly-review, quarterly-review, annual-review); `LLM` = an agent writes it, which in the automated pipeline is `/lore-process`. A page you author DIRECTLY has no pipeline behind it, so you fill EVERY section yourself, `machine` ones included — except a concept's `## Sources` section and its `source_count`, which `lore graph backlinks-sync` re-derives wholesale from the forward links on citing pages every time it runs, so leave those empty and let it.

A concept's `## Synthesis` is yours to write when you create the page and is NOT yours after that. It is owed against the set of pages citing the concept, so once that set moves, `lore graph backlinks-sync` queues a rewrite and a drain writes the section from the sources themselves. Write what the page's own material establishes; do not write a synthesis you would not want restated from the evidence.

Every page's `type` frontmatter is its page-format id — exactly the `## {type}` names below (`concept`, `daily`, `document`, …). It is the one REQUIRED key of the Open Knowledge Format, so any OKF consumer can classify the vault's pages without Lorekeeper-specific knowledge.

## Links

Every internal reference is an inline markdown link `[Display](relative/path.md)` whose destination is RELATIVE TO THE CONTAINING PAGE'S DIRECTORY and always carries the `.md` extension — the one form Obsidian, GitHub, and OKF consumers all resolve. Never write `[[wikilinks]]`. A concept link from a page is `[{Name}]({concepts-dir}/{slug}.md)`, where `{concepts-dir}` is the relative path to `wiki/concepts` from that page and `{slug}` is the slug of the concept name (rule below). Destinations with spaces or parens are percent-encoded (`%20`, `%28`, `%29`); non-ASCII slugs stay verbatim.

## Navigating this vault

Ask for what you need and drill in from the answer — navigate, don't scan every file:
- `lore wiki search <query> --json` — the pages a query reaches, best match first. `matched` says WHY each is here: `identity`/`name` is a page the query names, `summary` one that opens by stating it, `text` one that merely mentions it. Start here for any topic you can phrase; it is the only entry point whose cost does not grow with the vault.
- `wiki/map.md` — concepts grouped by citation cluster (the graph's emergent structure); read it to see what a topic sits beside once you have found it.
- `wiki/index.md` — catalog of every page, grouped by category, each with a first-sentence summary. It holds every page and grows with the vault, so read a category's section to survey what exists there — not the whole file to find one page.
- `wiki/log.md` — reverse-chronological timeline of when each knowledge node entered the vault.
From an entry point, open the pages it links and follow their links. Regenerate every entry point with `lore wiki refresh`.

## concept (`wiki/concepts/{slug}.md`)

| Section | Heading | Owner |
|---------|---------|-------|
| Synthesis | `## Synthesis` | LLM |
| Sources | `## Sources` | machine |
| Related | `## Related` | LLM |

Frontmatter: `id`, `type`, `title`, `aliases`, `created`, `updated`, `category`, `source_count`, `llm_inputs`

## daily (`daily/{source-id}/YYYY-MM-DD.md`)

| Section | Heading | Owner |
|---------|---------|-------|
| Summary | `## Summary` | LLM |
| Events / Messages | `## Key Events / Key Messages` | machine |
| Concepts | `## Related Concepts` | LLM |

Frontmatter: `id`, `type`, `title`, `created`, `labels`, `source`, `event_count`

## document (`wiki/documents/{slug}.md`)

| Section | Heading | Owner |
|---------|---------|-------|
| Summary | `## Summary` | LLM |
| Content | `## Content` | machine |
| Extracted Concepts | `## Related Concepts` | LLM |

Frontmatter: `id`, `type`, `title`, `created`, `updated`, `document_type`, `source_url`, `source_file`, `tags`

`document_type` values: `note` | `report` | `data` (FORMAT only; subject-matter goes in `tags`).

## exploration (`wiki/explorations/{slug}.md`)

| Section | Heading | Owner |
|---------|---------|-------|
| Question | `## Question` | LLM |
| Synthesis | `## Synthesis` | LLM |
| Grounding | `## Grounding` | LLM |

Frontmatter: `id`, `type`, `title`, `aliases`, `created`, `updated`, `tags`

## weekly-synthesis (`synthesis/weekly/YYYY-Www.md`)

| Section | Heading | Owner |
|---------|---------|-------|
| Key Themes | `## Key Themes This Week` | LLM |

Frontmatter: `id`, `type`, `title`, `created`, `labels`, `period`, `sources_covered`

## work-log (`me/work-log/YYYY-MM-DD.md`)

| Section | Heading | Owner |
|---------|---------|-------|
| Topic Summary | `## Topics` | LLM |
| Sources | `## Sources` | machine |

Frontmatter: `id`, `type`, `title`, `created`, `labels`, `categories`, `sources`

## weekly-review (`me/weekly/YYYY-Www.md`)

| Section | Heading | Owner |
|---------|---------|-------|
| Period | `## Period` | machine |
| Summary | `## Summary` | LLM |
| Category Distribution | `## Category Distribution` | machine |

Frontmatter: `id`, `type`, `title`, `created`, `labels`, `period`, `days_logged`

## monthly-review (`me/monthly/YYYY-MM.md`)

| Section | Heading | Owner |
|---------|---------|-------|
| Period | `## Period` | machine |
| Summary | `## Summary` | LLM |
| Category Distribution | `## Category Distribution` | machine |

Frontmatter: `id`, `type`, `title`, `created`, `labels`, `period`, `days_logged`

## quarterly-review (`me/quarterly/YYYY-Qq.md`)

| Section | Heading | Owner |
|---------|---------|-------|
| Period | `## Period` | machine |
| Category Distribution | `## Category Distribution` | machine |
| Summary | `## Summary` | LLM |
| Monthly Breakdown | `## By Month` | machine |

Frontmatter: `id`, `type`, `title`, `created`, `labels`, `period`

## annual-review (`me/annual/YYYY.md`)

| Section | Heading | Owner |
|---------|---------|-------|
| Overview | `## Overview` | LLM |
| Quarterly Breakdown | `## By Quarter` | machine |
| Category Distribution | `## Category Distribution` | machine |

Frontmatter: `id`, `type`, `title`, `created`, `labels`, `period`

## Concept convergence

One concept = one page. Every agent that creates or merges concept pages follows this exact algorithm, so the wiki converges instead of accumulating variants.

**A concept's title is its name and nothing else.** The title is the address and the lookup key, and the lookup is exact — so a title carrying a parenthetical gloss answers to neither the term nor the gloss, and the next mention of the bare term mints a rival page beside it. The name is COPIED from the material you just read, never composed: whether a field has settled on a form in one language or another is a judgment with no stable answer for a term the material is introducing, and two answers to it in one batch is exactly how one concept becomes two pages. Where the material writes several forms, the title is the one it uses AS the term and every other — the gloss, the translation, the expanded acronym, the abbreviation — goes in `aliases`, which is what makes a citation written in any of them resolve here. A form the material does not write is a name no later extraction reproduces.

**This vault is written in English, and where the material writes the concept in English too that form is not optional in `aliases`.** A reader who does not know the title searches in the language the vault is written in, and without the alias they reach nothing while the page holds every citation on the subject — after which the next extraction writing that form mints a rival page. What bounds this is the same rule the title follows: an alias is a name the material WRITES, so a concept the sources only ever name one way gets one name. A translation nobody writes is a spelling nobody searches for, and inventing one costs a rival page rather than preventing it.

1. **Ask which page owns the name**: `lore resolve <name>` answers with the page a citation of it addresses, by the same rule the ingest pipeline routes an extraction by — so the two cannot disagree about what an existing name is. Exit 0 names the page (reuse its slug and title, never a variant), exit 1 means no page answers to it, exit 2 means more than one does and `lore graph lint` already reports the pair. The match is EXACT on identity, which folds spelling and nothing else: `VectorDB` finds `vector-db`, `k8s` does not find `kubernetes`.

   Ask it for EVERY form the material writes, never the title alone. The other forms are what a page written from a source in another language already answers to, and a hit on ANY of them is the owner — reuse that page and register the forms it does not yet carry. Asking only the title is what mints a rival beside the page that already holds the subject: a name an established page answers to is REFUSED as an alias on a new page, so the one form that would have joined them is dropped by the act of creating the rival.
2. **Maintain a created-this-run set.** Every minted page or newly registered alias joins your in-context set BEFORE the next item is processed. `lore resolve` reads what is on disk, so it cannot see a page this run has not written yet — without the running set, two items independently mint `RAG` and `Retrieval-Augmented-Generation`.
3. **Judge the names `resolve` cannot.** An exit 1 is the answer for a name nothing answers to, not for a concept the vault lacks: an acronym and its expansion, a plural, a team's shorthand are DIFFERENT names for one thing, and no rule about spelling can see it. Ask `lore wiki search` for two or three distinguishing terms of EACH form the material writes — never a whole multi-word name, since every term must appear and a long query narrows past the very page it is looking for, while a one-word form is the only term it has and is asked whole — then read the hits and judge. In `--json`, `format` says whether a hit is even a concept and `matched` how it was reached: one reached at `text` sits behind every name and summary hit and is the one a limit drops. Reuse the established page and register the surface form as an alias when one matches, and when in doubt prefer the established broader concept over a narrow variant. Two things a query cannot reach: a rival sharing no word with any form the material writes, and another inflection of a one-word name — `guardrails` does not find `guardrail` — which is worth asking for explicitly. The registry (`lore wiki concepts`) is where the rest would show, and it is a read whose cost grows with the vault while a query's does not.
4. **Register surface forms as aliases.** When a source's surface form differs from the canonical name, append it to the concept's `aliases` frontmatter — `lore resolve` answers with this page for an alias, so the next run's first question lands here instead of minting a variant. Links are unaffected (they address the slug path; the display text is free-form). An alias edit is metadata-only: it never renames the page and is not, by itself, a reason to rewrite the body (whether a merge also enriches the synthesis body is the consuming workflow's own judgment).
5. **Slug normalization** is `lore`'s slugify, exactly: NFKC → lowercase → non-alphanumeric to hyphen → collapse runs → trim edges.

Machine-owned evidence fields — never hand-write them: a NEW concept page starts with an empty `## Sources` body and `source_count: 0`; on an EXISTING page leave both exactly as found. Record citations as forward markdown links to the concept page on the ORIGIN page (its `## Related Concepts` section, link form per `## Links` above); `lore graph backlinks-sync` re-derives every concept's `## Sources` + `source_count` from those forward links wholesale — an entry not backed by a forward link is wiped, and a concept cited by several pages in one batch is counted correctly where hand-written one-ref-per-item entries would undercount. Finish any batch that created concept pages OR citations with `lore graph backlinks-sync`, then `lore wiki refresh`.
